Clean up, mmap.extensions validation
Signed-off-by: David Zane <davizane@amazon.com>